move users management to "customers" application

--- a/templates/customers/login.html
+++ b/templates/customers/login.html
@@ -10,5 +10,10 @@
     {{ form.as_p }}
     <button type="submit">Login</button>
 </form>
+
+<p>
+    <a href="{% url 'register' %}" class="link-button">Register</a>
+</p>
+
 </body>
 </html>
