--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -1,19 +1,20 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Login</title>
-</head>
-<body>
-<h2>Login</h2>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Login</button>
-</form>
+{% extends 'base.html' %}
 
-<p>
-    <a href="{% url 'register' %}" class="link-button">Register</a>
-</p>
+{% block title %}Login{% endblock %}
 
-</body>
-</html>
+{% block content %}
+    <h2>Login page</h2>
+    <form method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit" class="btn btn-primary">Login</button>
+    </form>
+
+    <p>
+    
+    </p>
+    <p>
+        <a href="{% url 'register' %}" class="btn btn-secondary">Register</a>
+    </p>
+
+{% endblock %}
